# Projekt_C_wykresy

./: BioAnalyzerApp_pl_PL.ts  BioAnalyzerDLL.cpp  BioAnalyzerDLL.h  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
BioAnalyzer/: CMakeLists.txt
BioAnalyzerDLL/: BioAnalyzerDLL.cpp  BioAnalyzerDLL.h  framework.h
